# LowLatencyMessagingBus

./: .gitignore  API_REFERENCE.md  ARCHITECTURE.md  CMakeLists.txt  DESIGN.md  INDEX.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  REFACTORING.md  SUMMARY.txt  VERSION.md  build.bat  build.sh  build_simple.bat
examples/: publisher.cpp  subscriber.cpp
include/: publisher.hpp  ring_buffer.hpp  serializer.hpp  shared_memory.hpp  subscriber.hpp
tests/: integration_test.cpp
tools/: benchmark.cpp
